[package]
name = "termrender"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
once_cell = "1.21.3"
paste = "1.0.15"
rand = "0.9.2"
strip-ansi-escapes = "0.2.1"
uuid = { version = "1.18.1", features = ["v4"] }



[profile.minimal]
inherits = "release"     # Start from release settings
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[features]
# log seviyeleri
debug = ["info","warn"]
info = []
warn = ["error"]
error = []
